<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorOnBackground"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsFragment">

    <include
        android:id="@+id/prev"
        layout="@layout/circular_imagebutton_prev"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/nightmodeSwitch"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/nightmode"
        android:textSize="18sp"
        app:thumbTint="?attr/colorPrimary"
        android:textColor="?attr/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"/>


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/contrastSwitch"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:text="@string/contrast"
        android:textSize="18sp"
        android:textColor="?attr/colorPrimaryDark"
        app:thumbTint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nightmodeSwitch"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/textClearData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/delete_data"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/buttonClearData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonClearData" />

    <ImageButton
        android:id="@+id/buttonClearData"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:background="?attr/colorSecondaryVariant"
        android:contentDescription="@string/delete_all_data"
        android:src="@drawable/ic_baseline_delete_forever_24"
        android:text="@string/delete_data"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contrastSwitch" />

        <Button
            android:id="@+id/buttonTilBod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="?attr/colorPrimary"
            android:padding="10dp"
            android:text="@string/goToWax"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="18sp"
            android:layout_margin="30dp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textClearData"
            app:layout_constraintVertical_bias="0.7" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:lines="2"
            android:text="@string/copyright_data"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

