<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="com.example.skismoring.ui.tips.TipsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorOnBackground"
        tools:context=".ui.tips.TipsFragment">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/open_sans_regular"
            android:text="@string/wax_calculator"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewSnowtype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/open_sans_regular"
            android:text="@string/snowtype"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/rightInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <LinearLayout
            android:id="@+id/leftInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewSnowtype"
            app:layout_constraintRight_toLeftOf="@+id/rightInput"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="10dp"
            android:gravity="center_horizontal">

            <LinearLayout
                android:id="@+id/newSnowButtons"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/snowtype_dry_newly_fallen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/dryNewlyFallen"
                    android:background="@drawable/recommendation_shadow"
                    android:padding="5dp"
                    android:src="@drawable/ic_new_fallen_snow" />

                <ImageButton
                    android:id="@+id/snowtype_dry_fine_grained"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/dryFineGrained"
                    android:padding="5dp"
                    android:background="@drawable/recommendation_shadow"
                    android:src="@drawable/ic_fine_grained_snow"/>

                <ImageButton
                    android:id="@+id/snowtype_dry_old_converted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/dryOldConverted"
                    android:background="@drawable/recommendation_shadow"
                    android:padding="5dp"
                    android:src="@drawable/ic_old_snow" />

                <ImageButton
                    android:id="@+id/snowtype_dry_coarse_grained"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/dryCoarseGrained"
                    android:padding="5dp"
                    android:background="@drawable/recommendation_shadow"
                    android:src="@drawable/ic_old_snow_frozen"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/oldSnowButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="start">

                <ImageButton
                    android:id="@+id/snowtype_wet_newly_fallen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/wetNewlyFallen"
                    android:background="@drawable/recommendation_shadow"
                    android:padding="5dp"
                    android:src="@drawable/ic_new_fallen_moist_snow" />

                <ImageButton
                    android:id="@+id/snowtype_wet_fine_grained"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/wetFineGrained"
                    android:padding="5dp"
                    android:background="@drawable/recommendation_shadow"
                    android:src="@drawable/ic_fine_grained_moist_snow"/>

                <ImageButton
                    android:id="@+id/snowtype_wet_old_converted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/wetOldConverted"
                    android:background="@drawable/recommendation_shadow"
                    android:padding="5dp"
                    android:src="@drawable/ic_old_moist_snow" />

                <ImageButton
                    android:id="@+id/snowtype_wet_coarse_grained"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/wetCoarseGrained"
                    android:padding="5dp"
                    android:background="@drawable/recommendation_shadow"
                    android:src="@drawable/ic_corn_snow_wet"/>


            </LinearLayout>
         </LinearLayout>

        <LinearLayout
            android:id="@+id/rightInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:orientation="vertical"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toRightOf="@+id/leftInput"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSnowtype">

            <!--<TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/temperature"
                android:textColor="?attr/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />-->

            <NumberPicker
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="25dp"
                android:theme="@style/NumberPickerText" />
        </LinearLayout>


        <include
            android:id="@+id/recommendation"
            layout="@layout/recommendation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/leftInput" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>