<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnBackground"
    tools:context=".ui.onBoarding.screens.FirstScreen">

    <include
        layout="@layout/circular_imagebutton_next"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </include>

    <TextView
        android:id="@+id/firstScreen_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/firstScreen_text1"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/firstScreen_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/firstScreen_logo"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="30dp"
        android:contentDescription="@string/description_firstScreen"
        android:src="@drawable/logo_siste"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/firstScreen_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/open_sans_regular"
        android:padding="50dp"
        android:text="@string/firstScreen_text2"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstScreen_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>